--- a/PHYS_622-3_belitz_notes.tex
+++ b/PHYS_622-3_belitz_notes.tex
@@ -2947,7 +2947,7 @@ Equation (\ref{eq:regular_limit}) are equal.\end{defn}
 $\left\{ e^{-\frac{x^{2}}{n^{4}}}\right\} $ is equivalent to $\left\{ e^{-\frac{x^{2}}{n^{2}}}\right\} $;
 so is $\left\{ e^{-\frac{x^{2}}{n}}\right\} $.\end{example}
 \begin{defn}
-\textbf{\emph{\label{def:Generalized-functions,-regulariz}Generalized
+\textbf{\emph{\label{def:Generalized-functions-regulariz}Generalized
 functions, regularizations.}}\textbf{ }The set of all equivalent regular
 sequences $\left\{ f_{n}\left(x\right)\right\} $ defines a \emph{generalized
 function }(or \emph{distribution})\footnote{In other words, if we let $L\in\mathbb{C}$, then $f\left(x\right)=\left\{ \left\{ f_{n}\left(x\right)\right\} :\lim_{n\rightarrow\infty}\indefint xf_{n}\left(x\right)F\left(x\right)=L\right\} $.
@@ -3067,7 +3067,7 @@ by
 \]
  \end{prop}
 \begin{proof}
-First, note that $f_{n}$ are test functions, as required by \cref{def:Generalized-functions,-regulariz}.
+First, note that $f_{n}$ are test functions, as required by \cref{def:Generalized-functions-regulariz}.
 Also note that
 \[
 \indefint xf_{n}\left(x\right)=\sqrt{\frac{n}{\pi}}\indefint xe^{-nx^{2}}=\frac{1}{\sqrt{\pi}}\indefint xe^{-x^{2}}=1.
@@ -6087,7 +6087,7 @@ of the approximations made above.
 \section{Cherenkov radiation}
 
 
-\subsection{\label{sub:ch5sec5_1The-time-Wigner-function,}The time-Wigner function,
+\subsection{\label{sub:ch5sec5_1The-time-Wigner-function}The time-Wigner function,
 and the macroscopic power spectrum}
 
 From \cref{sub:ch5sec4_3The-spectral-distribution}, the spectral
@@ -6358,14 +6358,14 @@ and initial conditions such that $\boldsymbol{y}\left(t\right)=R\left(\cos\omega
 \end{eqnarray*}
 \end{description}
 \begin{lem}
-The power spectrum from \textup{\cref{sub:ch5sec5_1The-time-Wigner-function,}
+The power spectrum from \textup{\cref{sub:ch5sec5_1The-time-Wigner-function}
 }\textup{\emph{can be written 
 \[
 \boxed{\frac{d^{2}\mathscr{P}\left(T\right)}{\infinitesimal{\Omega}d\omega}=\frac{\omega^{2}}{4\pi^{2}c^{3}}\indefint{\tau}e^{i\omega\tau}\left[\boldsymbol{j}\left(\boldsymbol{k},T+\frac{\tau}{2}\right)\cdot\boldsymbol{j}\left(\boldsymbol{k},T-\frac{\tau}{2}\right)^{*}-c^{2}\rho\left(\boldsymbol{k},T+\frac{\tau}{2}\right)\rho\left(\boldsymbol{k},T-\frac{\tau}{2}\right)^{*}\right]}
 \]
 }}\end{lem}
 \begin{proof}
-From \cref{sub:ch5sec5_1The-time-Wigner-function,}, the integrand
+From \cref{sub:ch5sec5_1The-time-Wigner-function}, the integrand
 (ignoring $e^{i\omega\tau}$ factor and coefficients) is 
 \begin{eqnarray*}
 \varepsilon_{ijk}\varepsilon_{ilm}\hat{x}_{j}\hat{x}_{l}W_{km}\left(\boldsymbol{k};T,\tau\right) & \overset{1.}{=} & \varepsilon_{ijk}\hat{x}_{j}\varepsilon_{ilm}\hat{x}_{l}j_{k}\left(\boldsymbol{k},T+\frac{\tau}{2}\right)j_{m}\left(\boldsymbol{k},T-\frac{\tau}{2}\right)^{*}\\
@@ -6374,7 +6374,7 @@ From \cref{sub:ch5sec5_1The-time-Wigner-function,}, the integrand
 \end{eqnarray*}
 
 \begin{enumerate}
-\item By definition (see \cref{sub:ch5sec5_1The-time-Wigner-function,}).
+\item By definition (see \cref{sub:ch5sec5_1The-time-Wigner-function}).
 \item From \cref{sub:ch5sec5_2Cherenkov-radiation} \cref{rem:ch5sec5_2The-Wigner-function}. 
 \item At asymptotic distances away from source, $\hat{\boldsymbol{x}}\approx\hat{\boldsymbol{k}}$.
 Using $\left|\boldsymbol{k}\right|=\frac{\omega}{c}$ and continuity
